--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 OPENAI_API_KEY=****
 
 # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
-AUTH_SECRET=Glam0ur1nB1ts
+AUTH_SECRET=
 
 # The following keys below are automatically created and
 # added to your environment when you deploy on vercel
